update DailyFoodReport mapping to use base date for evaluations